--- a/case-902275215/4/index.html
+++ b/case-902275215/4/index.html
@@ -66,15 +66,14 @@
 				
 				<div class="inner">
 
-					<img class="case-kv" src="img/kv.jpg" alt="Low Fidelity Wireframes." />
-
+					<img class="case-kv" src="img/kv.jpg" alt="Low Fidelity Wireframes." />		
 					
 					<section class="case-text">												
 						<h1>
-							04: MSI - Deal Content Production Tool
+							04: MSI - Deals Page & Deal Generator Tool
 						</h1>
 						<h2>							
-							Improving Content Production Workflow with API-Driven Automation
+							Semi-Automating Production with Component Design and Development
 						</h2>
 						<h3>							
 							UI/UX Design, Front-End Engineering, Rapid Iteration
