--- a/index.html
+++ b/index.html
@@ -79,15 +79,15 @@
 				
 				<div class="inner">
 					<div id="scroll-line" aria-hidden="false" class="animate__animated animate__fadeIn animate__delay-1s animate__slow"></div>
-					<ul id="case-list" class="odd-list">	
-						<!-- <li>
+					<ul id="case-list" class="even-list">	
+						<li>
 							<div class="case-info wow animate__fadeIn" data-wow-duration="1s">
 								<div class="info-inner">
 									<h3>
-										04: MSI - Deal Content Production Tool
+										04: MSI - Deals Page & Deal Generator Tool
 									</h3>
 									<h4>
-										Improving Content Production Workflow with API-Driven Automation
+										 Semi-Automating Production with Component Design and Development
 									</h4>
 									<h5>
 										UI/UX Design, Front-End Engineering, Rapid Iteration
@@ -104,10 +104,10 @@
 										<img src="img/locked.svg" alt="Locked Icon" />
 										Password Required
 									</div>
-									<img class="case-img" src="img/case-2.jpg" alt="Software UI." />
+									<img class="case-img" src="img/case-4.jpg" alt="Software UI." />
 								</div>		
 							</a>
-						</li> -->
+						</li>
 
 
 						<li>
