--- a/case-902275215/4/index.html
+++ b/case-902275215/4/index.html
@@ -386,7 +386,10 @@
 								<b>Write Documentation</b>
 								<p>With prices moved to the Hatch popup menu, the initial deal module could now display marketer-controlled messaging.</p>
 							</li>
-						</ul>					
+						</ul>		
+						<div class="case-img">
+							<img src="img/documentation.jpg" alt="Inforamtion Architecture Diagram." />
+						</div>			
 					</section>
 
 					<div class="h-line" aria-hidden="true"></div>	
