Add more images

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 										<img src="img/locked.svg" alt="Locked Icon" />
 										Password Required
 									</div>
-									<img class="case-img" src="img/case-4.jpg" alt="Software UI." />
+									<img class="case-img" src="img/case-4.jpg" alt="Deals Component." />
 								</div>		
 							</a>
 						</li>
