--- a/case-902275215/4/index.html
+++ b/case-902275215/4/index.html
@@ -327,6 +327,24 @@
 						</div>
 
 						<h5>
+							API Fallback & Feedback
+					   </h5>
+					   <p>							
+						Switching to API data required a solution for handling transfer delays and errors. Data would occasionally not send on the initial request, so I wrote an error handler that would resend multiple requests (Max 3) before displaying a "Deal is not Available" message. The additional requests would stall the UI, so I added a loading animation to give the user feedback that the retailer list is processing.
+					   </p>
+					   <div class="video-wrapper" style="padding:5.5%;background:#242424;">
+						   <video width="400" height="100" playsinline autoplay muted loop preload="metadeta">
+							 <source src="img/loader.mp4" type="video/mp4">
+						   </video>
+					   </div>
+					   <div class="video-wrapper">
+						   <video width="1440" height="680" playsiplaysinline autoplay muted loop preload="metadeta">
+							 <source src="img/split.mp4#t=0.1" type="video/mp4">
+						   </video>
+					   </div>
+					   <br />
+
+						<h5>
 							DealData.js & DealDataGenerator - Plugin Conversion & Regional Support
 						</h5>
 						<p>
@@ -387,16 +405,10 @@
 							make tabs more visible
 							relaunch to back to school campaign		
 						</p>
-						<h5>
-							 API Fallback & Feedback
-						</h5>
-						<p>							
-							add load screen due to load nature of api
-								reloading feature for inital failed connect			
-						</p>
-					</section>
+						
+					</section> -->
 
-					<div class="h-line" aria-hidden="true"></div>	
+					<!-- <div class="h-line" aria-hidden="true"></div>	
 
 
 					<section id="chapter-userflow" class="case-text">	
@@ -404,9 +416,9 @@
 						<p>							
 								
 						</p>
-					</section> -->
+					</section>
 
-
+ -->
 
 
 
