--- a/case-902275215/4/index.html
+++ b/case-902275215/4/index.html
@@ -106,7 +106,7 @@
 							<li><a href="#chapter-iteration-1" class="case-chapter">1st Iteration (Week 1)</a></li>
 							<li><a href="#chapter-iteration-2" class="case-chapter">2nd Iteration (Week 2)</a></li>
 							<li><a href="#chapter-iteration-3" class="case-chapter">3rd Iteration (Week 3 & 4)</a></li>
-							<!-- <li><a href="#chapter-iteration-4" class="case-chapter">4th Iteration (Week 5)</a></li> -->
+							<li><a href="#chapter-iteration-4" class="case-chapter">4th Iteration (Week 5)</a></li>
 						</ol>
 					</section>
 
@@ -393,7 +393,7 @@
 						</div>			
 					</section>
 
-					<!-- <div class="h-line" aria-hidden="true"></div>	
+					<div class="h-line" aria-hidden="true"></div>	
 
 					<section id="chapter-iteration-4" class="case-text">	
 						<h4>4th iteration (Week 5):</h4>
@@ -401,12 +401,29 @@
 							Deal Page - New Campaign & UI Update
 						</h5>
 						<p>	
-							The 3rd Iteration of the DealPage Launched 
-							make tabs more visible
-							relaunch to back to school campaign		
+							With the API system running stable, I focused on improving the consumer-facing UI. The primary goal was to improve navigation visibility.			
 						</p>
-						
-					</section> -->
+						<br />
+						<h6>
+							Navigation & Awards
+						</h6>
+						<p>	
+ 							I chose to display the awards with a minimalistic text-based layout instead of the original graphical banner. I darkened the current tab marker and added drop-shadow to increase the overall navigation contrast. 
+						</p>
+						<div class="case-img">
+							<img src="img/ui-1.jpg" alt="Changes to Navigation." />
+						</div>	
+						<br /><br />
+						<h6>
+							Tag Navigation
+						</h6>
+						<p>	
+							I increased the font size and contrast for all the tag options. I added drop-shadow on the current tag to add another layer of contrast.
+						</p>
+						<div class="case-img">
+							<img src="img/ui-2.jpg" alt="Changes to Navigation." />
+						</div>	
+					</section>
 
 					<!-- <div class="h-line" aria-hidden="true"></div>	
 
