--- a/case-902275215/4/index.html
+++ b/case-902275215/4/index.html
@@ -73,7 +73,7 @@
 							04: MSI - Deals Page & Deal Generator Tool
 						</h1>
 						<h2>							
-							Semi-Automating Production with Component Design and Development
+							Improving Production Efficiency with API Driven Component & Automation Tool
 						</h2>
 						<h3>							
 							UI/UX Design, Front-End Engineering, Rapid Iteration
