--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 										04: MSI - Deals Page & Deal Generator Tool
 									</h3>
 									<h4>
-										 Semi-Automating Production with Component Design and Development
+										Improving Production Efficiency with API Driven Component & Automation Tool
 									</h4>
 									<h5>
 										UI/UX Design, Front-End Engineering, Rapid Iteration
