add workflow comparision

--- a/case-902275215/4/index.html
+++ b/case-902275215/4/index.html
@@ -262,6 +262,18 @@
 								</p>
 							</li>
 						</ul>
+						<br /><br />
+						<h6>
+							New Workflow - Production Time Reduced by ~50%
+						</h6>
+						<p>
+							The new workflow will remove a possible point of human error, provide early QA, and cut production time in half. 
+						</p>
+						<div class="case-img">
+							<img src="img/workflow-comparison.jpg" alt="Workflow Comparision." />
+						</div>
+
+						
 						<h5>
 							Design Audit
 						</h5>
@@ -433,13 +445,12 @@
 					<section id="chapter-userflow" class="case-text">	
 						<h4>Additional Implementations:</h4>
 						<p>							
-								
-						</p>
+							With the deals component built, it can be styled and customed for different campaigns.
 					</section>
 
+
+
  -->
-
-
 
 
 
