--- a/case/1/index.html
+++ b/case/1/index.html
@@ -38,9 +38,14 @@
 				<nav>
 					<a class="name" href="/">Rich Huynh</a>
 					<ul>
+						
 						<li>
 							<a class="topnav-link" href="/">Work</a>
 						</li>
+						<li>
+							<a class="topnav-link" href="https://richhuynh.com/rh-2022/">Past Work</a>
+						</li>
+						
 						<!--
 						<li>
 							<a class="topnav-link" href="/about">About</a>
