--- a/index.html
+++ b/index.html
@@ -37,10 +37,14 @@
 						<li>
 							<a class="topnav-link current-page" href="/">Work</a>
 						</li>
-						<!--
+
 						<li>
+							<a class="topnav-link" href="https://richhuynh.com/rh-2022/">Past Work</a>
+						</li>
+						
+						<!-- <li>
 							<a class="topnav-link" href="/about">About</a>
-						</li>-->
+						</li> -->
 						<li>
 							<a class="topnav-link" href="https://www.linkedin.com/in/richhuynh" data-pw-exclude="true" >LinkedIn</a>
 						</li>
@@ -243,8 +247,9 @@
 		<!--jsCookie-->
 		<script src="/js/js-cookie/js.cookie.min.js"></script>
 
-		<!--SJCL & PW-->
+		<!--SJCL & richOverlay & PW-->
 		<script type="text/javascript" src="/js/sjcl/sjcl.js"></script>
+		<script type="text/javascript" src="/js/richOverlay.js"></script>
 		<script type="text/javascript" src="/js/pw.js"></script>
 		
 		
