--- a/case-902275215/4/index.html
+++ b/case-902275215/4/index.html
@@ -47,6 +47,10 @@
 						</li>
 						-->
 						<li>
+							<a class="topnav-link" href="https://richhuynh.com/rh-2022/">Past Work</a>
+						</li>
+						
+						<li>
 							<a class="topnav-link" href="https://www.linkedin.com/in/richhuynh" data-pw-exclude="true">LinkedIn</a>
 						</li>
 					</ul>
