--- a/case/2/index.html
+++ b/case/2/index.html
@@ -40,15 +40,10 @@
 					<a class="name" href="/">Rich Huynh</a>
 					<ul>
 						<li>
-							<a class="topnav-link" href="/">Work</a>
+							<a class="topnav-link" href="/">Cases</a>
 						</li>
-						<!--
 						<li>
-							<a class="topnav-link" href="/about">About</a>
-						</li>
-						-->
-						<li>
-							<a class="topnav-link" href="https://richhuynh.com/rh-2022/">Past Work</a>
+							<a class="topnav-link" href="https://richhuynh.com/rh-2022/">Multimedia</a>
 						</li>
 						
 						<li>
