--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 					<a class="name" href="/" >Rich Huynh</a>
 					<ul>
 						<li>
-							<a class="topnav-link current-page" href="/">Work</a>
+							<a class="topnav-link current-page" href="/">Cases</a>
 						</li>
 
 						<li>
-							<a class="topnav-link" href="https://richhuynh.com/rh-2022/">Past Work</a>
+							<a class="topnav-link" href="https://richhuynh.com/rh-2022/">Multimedia</a>
 						</li>
 						
 						<!-- <li>
