--- a/case/1/index.html
+++ b/case/1/index.html
@@ -40,10 +40,10 @@
 					<ul>
 						
 						<li>
-							<a class="topnav-link" href="/">Work</a>
+							<a class="topnav-link" href="/">Cases</a>
 						</li>
 						<li>
-							<a class="topnav-link" href="https://richhuynh.com/rh-2022/">Past Work</a>
+							<a class="topnav-link" href="https://richhuynh.com/rh-2022/">Multimedia</a>
 						</li>
 						
 						<!--
