--- a/case-902275215/4/index.html
+++ b/case-902275215/4/index.html
@@ -224,6 +224,8 @@
 						<h6>
 							DealData.js - Generating HTML Content from AJAX
 						</h6>
+
+
 						
 						<div class="case-img">
 							<img src="img/hatch-flow.jpg" alt="Hatch Data Flow." />
@@ -259,6 +261,9 @@
                                     I designed and developed the DealDataGenerator Tool that would allow marketers to convert uploaded Google Sheet CSV files into downloadable JSON files with a single click.
                                     The tool generated an interactive preview for marketers to QA their content before sending the JSON file to the design team.
 								</p>
+								<div class="case-img">
+									<img src="img/tool.jpg" alt="Deal Tool." />
+								</div>
 							</li>
 						</ul>
 						<br /><br />
