--- a/case-902275215/4/index.html
+++ b/case-902275215/4/index.html
@@ -443,21 +443,21 @@
 						</div>
 					</section>
 
-					<!-- <div class="h-line" aria-hidden="true"></div>	
+					<div class="h-line" aria-hidden="true"></div>	
 
 
 					<section id="chapter-userflow" class="case-text">	
 						<h4>Additional Implementations:</h4>
 						<p>							
-							With the deals component built, it can be styled and customed for different campaigns.
+							With the deals component built, it has since been styled and implemented onto multiple campaign pages.
+						</p>
+						<div class="case-img">
+							<img src="img/additional.jpg" alt="More pages with component." />
+						</div>
 					</section>
 
 
-
- -->
-
-
-
+				</div>
 				</div>
 			</main>
 
