--- a/case-902275215/4/index.html
+++ b/case-902275215/4/index.html
@@ -106,6 +106,7 @@
 							<li><a href="#chapter-iteration-2" class="case-chapter">2nd Iteration (Week 2)</a></li>
 							<li><a href="#chapter-iteration-3" class="case-chapter">3rd Iteration (Week 3 & 4)</a></li>
 							<li><a href="#chapter-iteration-4" class="case-chapter">4th Iteration (Week 5)</a></li>
+							<li><a href="#chapter-additional" class="case-chapter">Additional Implementations</a></li>
 						</ol>
 					</section>
 
@@ -446,10 +447,10 @@
 					<div class="h-line" aria-hidden="true"></div>	
 
 
-					<section id="chapter-userflow" class="case-text">	
+					<section id="chapter-additional" class="case-text">	
 						<h4>Additional Implementations:</h4>
 						<p>							
-							With the deals component built, it has since been styled and implemented onto multiple campaign pages.
+							With the deals component built, it has since been customized and implemented onto multiple campaign pages.
 						</p>
 						<div class="case-img">
 							<img src="img/additional.jpg" alt="More pages with component." />
