--- a/index.html
+++ b/index.html
@@ -94,6 +94,36 @@
             class="animate__animated animate__fadeIn animate__delay-1s animate__slow"
           ></div>
           <ul id="case-list" class="even-list">
+            <!-- <li>
+              <div class="case-info wow animate__fadeIn" data-wow-duration="1s">
+                <div class="info-inner">
+                  <h3>05: iTrustCapital - Website & CMS</h3>
+                  <h4>
+                    Full-Website Redesign & Rebuild on Next.js with Headless CMS
+                    Integration
+                  </h4>
+                  <h5>
+                    Web Design, 3D Design, Front-End Engineering, Data
+                    Visualization, Data Design
+                  </h5>
+                  <a class="case-link" href="./case/5/">View Case </a>
+                </div>
+              </div>
+              <a
+                class="case-img wow animate__fadeIn offsetMe"
+                data-wow-duration="1s"
+                href="./case/5/"
+              >
+                <div class="img-wrap">
+                  <img
+                    class="case-img"
+                    src="./img/case-4.jpg"
+                    alt="Deals Component."
+                  />
+                </div>
+              </a>
+            </li> -->
+
             <li>
               <div class="case-info wow animate__fadeIn" data-wow-duration="1s">
                 <div class="info-inner">
