--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             class="animate__animated animate__fadeIn animate__delay-1s animate__slow"
           ></div>
           <ul id="case-list" class="even-list">
-            <!-- <li>
+            <li>
               <div class="case-info wow animate__fadeIn" data-wow-duration="1s">
                 <div class="info-inner">
                   <h3>05: iTrustCapital - Website & CMS</h3>
@@ -106,23 +106,31 @@
                     Web Design, 3D Design, Front-End Engineering, Data
                     Visualization, Data Design
                   </h5>
-                  <a class="case-link" href="./case/5/">View Case </a>
+                  <a class="case-link" data-case-locked="true" data-case-id="5">
+                    <img src="img/locked.svg" alt="Locked Icon" />
+                    Login | View Case
+                  </a>
                 </div>
               </div>
               <a
                 class="case-img wow animate__fadeIn offsetMe"
                 data-wow-duration="1s"
-                href="./case/5/"
+                data-case-locked="true"
+                data-case-id="5"
               >
                 <div class="img-wrap">
+                  <div class="password-required">
+                    <img src="img/locked.svg" alt="Locked Icon" />
+                    Password Required
+                  </div>
                   <img
                     class="case-img"
-                    src="./img/case-4.jpg"
-                    alt="Deals Component."
+                    src="img/case-5.jpg"
+                    alt="iTrustCapital Website Preview."
                   />
                 </div>
               </a>
-            </li> -->
+            </li>
 
             <li>
               <div class="case-info wow animate__fadeIn" data-wow-duration="1s">
